# timeseriespro

./: .cache.sqlite  .gitignore  CLAUDE.md  Dockerfile  PRD_Advanced_DS_Features.md  api_routes_advanced.py  app.py  celery_app.py  cloudbuild.yaml  data_processor.py  data_profiler.py  deploy.sh  ensemble_methods.py  external_data.py  feature_engineer.py  forecasting.py  gunicorn.conf.py  main.py  main.sh  migration.py  migrations.py  model_optimizer.py  models.py  pyproject.toml  replit.md  requirements.txt  routes.py  test_backward_compatibility.py  test_data_profiler.py  test_models.py  test_postgresql_compatibility.py  test_postgresql_simple.py
.claude/: CLAUDE.md
.claude/commands/pm/: init.md
.claude/context/: application-architecture.md  codebase-structure.md  database-schema.md  development-patterns.md  forecasting-algorithms.md  frontend-api-endpoints.md  project-overview.md  technology-stack.md
instance/: forecasting.db
migrations/: 001_advanced_ds_schema.py
static/css/: style.css
static/js/: charts.js  main.js
static/reports/: sweetviz_report_project_6_20250822_184059.html
tasks/: data_tasks.py  model_tasks.py  optimization_tasks.py
templates/: base.html  compare.html  dashboard.html  project.html  upload.html
