[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "holidays>=0.74",
    "lightgbm>=4.6.0",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "prophet>=1.1.6",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.4",
    "werkzeug>=3.1.3",
    "xgboost>=2.0.0",
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "pytorch-forecasting>=1.0.0",
]
